tests/non-regression/052-err-connection-to-control.dfd
control K  k
process A  a
A --> K  data
